# BahasaAI

./: .gitignore  LICENSE  README.md  pyproject.toml
.sisyphus/evidence/: task-1-verification.txt  task-10-immutability.txt  task-10-inject.txt  task-10-merge.txt  task-11-fixtures.txt  task-11-no-interference.txt  task-12-english-skip.txt  task-12-full-pipeline.txt  task-12-graceful.txt  task-12-passthrough.txt  task-14-eviction.txt  task-14-roundtrip.txt  task-14-ttl.txt  task-2-protocol-subtyping.txt  task-2-tests.txt  task-2-types-import.txt  task-3-default-config.txt  task-3-env-override.txt  task-3-invalid-config.txt  task-4-gitignore.txt  task-5-code-blocks.txt  task-5-detect-indonesian.txt  task-5-detect-mixed.txt  task-5-edge-cases.txt  task-7-all-tests.txt  task-7-code-blocks.txt  task-7-passthrough.txt  task-8-scoring.txt  task-8-specific-passthrough.txt  task-8-vague-enhanced.txt  task-9-cap.txt  task-9-context-format.txt  task-9-known-refs.txt
.sisyphus/notepads/bahasa-ai/: learnings.md
src/bahasaai/core/: cache.py  config.py  cultural.py  detector.py  enhancer.py  meta.py  pipeline.py  provider.py  translator.py  types.py
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_cache.py  test_config.py  test_cultural.py  test_detector.py  test_enhancer.py  test_meta.py  test_pipeline.py  test_provider.py  test_smoke.py  test_translator.py  test_types.py
